[package]
name = "ssb-keyfile"
version = "0.5.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Keyfile operations for ssb."
repository = "https://github.com/sunrise-choir/ssb-keyfile-rs"
readme = "README.md"
license = "GPL-3.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
ssb-crypto = "0.2.2"
thiserror = "1.0.22"
base64 = "0.13.0"
structopt = { version = "0.3.21", optional = true }

[dev-dependencies]
tempfile = "3.1"

[[bin]]
name = "ssb-keyfile"
path = "src/main.rs"
required-features = ["structopt"]
